added guide controller and logger

--- a/TraversalCoreProject/wwwroot/404/index.html
+++ b/TraversalCoreProject/wwwroot/404/index.html
@@ -17,7 +17,7 @@
         <div class="text_box">
           <h2>Sanırım kayboldun 😅</h2>
           <p>Aradığın sayfa burada değil. Ana sayfaya dönmek ister misin?</p>
-          <a href="/" class="link_404">Ana Sayfaya Git</a>
+          <a href="/Default/Index" class="link_404">Ana Sayfaya Git</a>
         </div>
       </div>
     </div>
